# simple_map_reduce

./: .travis.yml  CMakeLists.txt  Doxyfile  annotated.html  args__parser_8cpp.html  args__parser_8cpp__incl.map  args__parser_8cpp__incl.md5  args__parser_8h.html  args__parser_8h__dep__incl.map  args__parser_8h__dep__incl.md5  args__parser_8h__incl.map  args__parser_8h__incl.md5  args__parser_8h_source.html  base__executor_8cpp.html  base__executor_8cpp__incl.map  base__executor_8cpp__incl.md5  base__executor_8h.html  base__executor_8h__dep__incl.map  base__executor_8h__dep__incl.md5  base__executor_8h__incl.map  base__executor_8h__incl.md5  base__executor_8h_source.html  classargs__parser-members.html  classargs__parser.html  classbase__executor-members.html  classbase__executor.html  classbase__executor__inherit__graph.map  classbase__executor__inherit__graph.md5  classes.html  classmap-members.html  classmap.html  classmap__coll__graph.map  classmap__coll__graph.md5  classmap__functor-members.html  classmap__functor.html  classmap__inherit__graph.md5  classreduce-members.html  classreduce.html  classreduce__coll__graph.md5  classreduce__functor-members.html  (+102 more)
scripts/: conan_config.sh  config_boost.sh
search/: all_0.js  all_1.js  all_2.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  files_0.js  files_1.js  files_5.js  files_8.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  variables_0.js
src/: CMakeLists.txt  args_parser.cpp  args_parser.h  base_executor.cpp  base_executor.h  defines.h  functors.cpp  functors.h  main.cpp  map.cpp  map.h  reduce.cpp  reduce.h  shuffle.cpp  shuffle.h  utils.cpp  utils.h  yamr.cpp  yamr.h
tests/: CMakeLists.txt  mr_tests.cpp
